<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.carleton.comp4601.a1.UpdateActivity"
    tools:showIn="@layout/update_activity"
    android:gravity="center">

    <TextView
        android:id="@+id/ipAddressTitleTextUpdate"
        android:text="@string/ip_address_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignTop="@+id/ipAddressContentTextUpdate"
        android:layout_alignBottom="@+id/ipAddressContentTextUpdate"
        android:layout_alignParentStart="true"/>

    <!-- Allows user to enter their IP Address -->
    <EditText
        android:id="@+id/ipAddressContentTextUpdate"
        android:hint="@string/ip_address_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/ipAddressTitleTextUpdate"/>

    <!-- displays text: "name:" -->
    <TextView
        android:id="@+id/nameTitleViewUpdate"
        android:text="@string/name_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ipAddressContentTextUpdate"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nameContentViewUpdate"
        android:layout_alignBottom="@+id/nameContentViewUpdate" />

    <!-- displays name of document -->
    <EditText
        android:id="@+id/nameContentViewUpdate"
        android:hint="@string/name_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ipAddressContentTextUpdate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@id/nameTitleViewUpdate" />

    <!-- displays text: "ID:" -->
    <TextView
        android:id="@+id/idTitleViewUpdate"
        android:text="@string/id_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/nameContentViewUpdate"
        android:layout_alignEnd="@+id/nameTitleViewUpdate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/idContentViewUpdate"/>

    <!-- displays the ID number of the document -->
    <EditText
        android:id="@+id/idContentViewUpdate"
        android:hint="@string/id_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/idTitleViewUpdate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/nameContentViewUpdate"/>

    <!-- displays the text: "Text:" -->
    <TextView
        android:id="@+id/textTitleViewUpdate"
        android:text="@string/text_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/idContentViewUpdate"
        android:layout_alignEnd="@+id/nameTitleViewUpdate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/textContentViewUpdate"/>

    <!-- displays the text of the document -->
    <EditText
        android:id="@+id/textContentViewUpdate"
        android:hint="@string/text_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textTitleViewUpdate"
        android:layout_below="@+id/idContentViewUpdate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <!-- displays the text: "Tags:" -->
    <TextView
        android:id="@+id/tagsTitleViewUpdate"
        android:text="@string/tags_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textContentViewUpdate"
        android:layout_alignEnd="@+id/nameTitleViewUpdate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tagsContentViewUpdate"/>

    <!-- displays the tags of the document -->
    <EditText
        android:id="@+id/tagsContentViewUpdate"
        android:hint="@string/tags_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tagsTitleViewUpdate"
        android:layout_below="@id/textContentViewUpdate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <!-- displays the text: "Links:" -->
    <TextView
        android:id="@+id/linksTitleViewUpdate"
        android:text="@string/links_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/tagsContentViewUpdate"
        android:layout_alignEnd="@+id/nameTitleViewUpdate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/linksContentViewUpdate"/>

    <!-- displays the links of the document -->
    <EditText
        android:id="@+id/linksContentViewUpdate"
        android:hint="@string/links_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/linksTitleViewUpdate"
        android:autoLink="web"
        android:layout_below="@id/tagsContentViewUpdate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</RelativeLayout>