<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.carleton.comp4601.a1.CreateActivity"
    tools:showIn="@layout/create_activity"
    android:gravity="center">

    <!-- displays the text "IP Address:" -->
    <TextView
        android:id="@+id/ipAddressTitleTextCreate"
        android:text="@string/ip_address_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignTop="@+id/ipAddressContentTextCreate"
        android:layout_alignBottom="@+id/ipAddressContentTextCreate"
        android:layout_alignParentStart="true"/>

    <!-- Allows user to enter their IP Address -->
    <EditText
        android:id="@+id/ipAddressContentTextCreate"
        android:hint="@string/ip_address_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/ipAddressTitleTextCreate"/>

    <!-- displays text: "name:" -->
    <TextView
        android:id="@+id/nameTitleViewCreate"
        android:text="@string/name_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ipAddressContentTextCreate"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nameContentViewCreate"
        android:layout_alignBottom="@+id/nameContentViewCreate" />

    <!-- displays name of document -->
    <EditText
        android:id="@+id/nameContentViewCreate"
        android:hint="@string/name_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ipAddressContentTextCreate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@id/nameTitleViewCreate" />

    <!-- displays text: "ID:" -->
    <TextView
        android:id="@+id/idTitleViewCreate"
        android:text="@string/id_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/nameContentViewCreate"
        android:layout_alignEnd="@+id/nameTitleViewCreate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/idContentViewCreate"/>

    <!-- displays the ID number of the document -->
    <EditText
        android:id="@+id/idContentViewCreate"
        android:hint="@string/id_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/idTitleViewCreate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/nameContentViewCreate"/>

    <!-- displays the text: "Text:" -->
    <TextView
        android:id="@+id/textTitleViewCreate"
        android:text="@string/text_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/idContentViewCreate"
        android:layout_alignEnd="@+id/nameTitleViewCreate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/textContentViewCreate"/>

    <!-- displays the text of the document -->
    <EditText
        android:id="@+id/textContentViewCreate"
        android:hint="@string/text_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textTitleViewCreate"
        android:layout_below="@+id/idContentViewCreate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <!-- displays the text: "Tags:" -->
    <TextView
        android:id="@+id/tagsTitleViewCreate"
        android:text="@string/tags_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textContentViewCreate"
        android:layout_alignEnd="@+id/nameTitleViewCreate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tagsContentViewCreate"/>

    <!-- displays the tags of the document -->
    <EditText
        android:id="@+id/tagsContentViewCreate"
        android:hint="@string/tags_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tagsTitleViewCreate"
        android:layout_below="@id/textContentViewCreate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <!-- displays the text: "Links:" -->
    <TextView
        android:id="@+id/linksTitleViewCreate"
        android:text="@string/links_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/tagsContentViewCreate"
        android:layout_alignEnd="@+id/nameTitleViewCreate"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/linksContentViewCreate"/>

    <!-- displays the links of the document -->
    <EditText
        android:id="@+id/linksContentViewCreate"
        android:hint="@string/links_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/linksTitleViewCreate"
        android:autoLink="web"
        android:layout_below="@id/tagsContentViewCreate"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</RelativeLayout>