<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.carleton.comp4601.a1.ViewActivity"
    tools:showIn="@layout/view_activity"
    android:gravity="center">

    <!-- displays the text "IP Address:" -->
    <TextView
        android:id="@+id/ipAddressTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_address_title_text"
        android:layout_alignTop="@+id/ipAddressContentTextView"
        android:layout_alignBottom="@+id/ipAddressContentTextView"
        android:gravity="center"/>

    <!-- Allows user to enter their IP Address -->
    <EditText
        android:id="@+id/ipAddressContentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address_hint_text"
        android:layout_toEndOf="@+id/ipAddressTitleTextView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <!-- displays text: "name:" -->
    <TextView
        android:id="@+id/nameTitleView"
        android:text="@string/name_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ipAddressContentTextView"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nameContentView"
        android:layout_alignBottom="@+id/nameContentView"/>

    <!-- displays name of document -->
    <TextView
        android:id="@+id/nameContentView"
        android:text="@string/name_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ipAddressContentTextView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@id/nameTitleView"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

    <!-- displays text: "ID:" -->
    <TextView
        android:id="@+id/idTitleView"
        android:text="@string/id_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/nameContentView"
        android:layout_alignEnd="@+id/nameTitleView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/idContentView"/>

    <!-- displays the ID number of the document -->
    <EditText
        android:id="@+id/idContentView"
        android:hint="@string/id_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/idTitleView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/nameContentView"/>

    <!-- displays the text: "Text:" -->
    <TextView
        android:id="@+id/textTitleView"
        android:text="@string/text_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/idContentView"
        android:layout_alignEnd="@+id/nameTitleView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/textContentView"/>

    <!-- displays the text of the document -->
    <TextView
        android:id="@+id/textContentView"
        android:text="@string/text_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textTitleView"
        android:layout_below="@+id/idContentView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

    <!-- displays the text: "Tags:" -->
    <TextView
        android:id="@+id/tagsTitleView"
        android:text="@string/tags_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textContentView"
        android:layout_alignEnd="@+id/nameTitleView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tagsContentView"/>

    <!-- displays the tags of the document -->
    <TextView
        android:id="@+id/tagsContentView"
        android:text="@string/tags_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tagsTitleView"
        android:layout_below="@id/textContentView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

    <!-- displays the text: "Links:" -->
    <TextView
        android:id="@+id/linksTitleView"
        android:text="@string/links_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/tagsContentView"
        android:layout_alignEnd="@+id/nameTitleView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/linksContentView"/>

    <!-- displays the links of the document -->
    <TextView
        android:id="@+id/linksContentView"
        android:text="@string/links_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/linksTitleView"
        android:layout_below="@id/tagsContentView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:autoLink="web"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

</RelativeLayout>
