<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.carleton.comp4601.a1.Main"
    tools:showIn="@layout/main_activity"
    android:gravity="center">

    <!-- displays the text "IP Address:" -->
    <TextView
        android:id="@+id/ipAddressTitleText"
        android:text="@string/ip_address_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignTop="@+id/ipAddressContentText"
        android:layout_alignBottom="@+id/ipAddressContentText"
        android:layout_alignParentStart="true"/>

    <!-- Allows user to enter their IP Address -->
    <EditText
        android:id="@+id/ipAddressContentText"
        android:hint="@string/ip_address_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/ipAddressTitleText"/>

    <TextView
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_button_text"
        android:background="@drawable/main_button_bg"
        android:padding="5dp"
        android:gravity="center"
        android:layout_below="@+id/ipAddressContentText"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:onClick="toCreate"
        style="@style/Base.TextAppearance.AppCompat.Button"/>

    <TextView
        android:id="@+id/updateButton"
        android:text="@string/edit_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createButton"
        android:onClick="toUpdate"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/main_button_bg"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Button"/>

    <TextView
        android:id="@+id/deleteButton"
        android:text="@string/delete_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateButton"
        android:onClick="toDelete"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/main_button_bg"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Button"/>

    <TextView
        android:id="@+id/viewButton"
        android:text="@string/get_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteButton"
        android:onClick="toView"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/main_button_bg"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Button"/>

    <TextView
        android:id="@+id/searchButton"
        android:text="@string/search_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewButton"
        android:onClick="toSearch"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/main_button_bg"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Button"/>

    <TextView
        android:id="@+id/viewLibButton"
        android:text="@string/view_lib_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchButton"
        android:onClick="toViewLib"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/main_button_bg"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Button"/>


</RelativeLayout>