<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_delete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.carleton.comp4601.a1.DeleteActivity"
    tools:showIn="@layout/delete_activity"
    android:gravity="center">

    <!-- displays the text "IP Address:" -->
    <TextView
        android:id="@+id/ipAddressTitleTextDelete"
        android:text="@string/ip_address_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignTop="@+id/ipAddressContentTextDelete"
        android:layout_alignBottom="@+id/ipAddressContentTextDelete"
        android:layout_alignParentStart="true"/>

    <!-- Allows user to enter their IP Address -->
    <EditText
        android:id="@+id/ipAddressContentTextDelete"
        android:hint="@string/ip_address_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/ipAddressTitleTextDelete"/>

    <!-- displays text: "ID:" -->
    <TextView
        android:id="@+id/idTitleViewDelete"
        android:text="@string/id_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ipAddressContentTextDelete"
        android:layout_alignTop="@+id/idContentViewDelete"
        android:layout_alignBottom="@+id/idContentViewDelete"
        android:layout_toStartOf="@+id/idContentViewDelete" />

    <!-- displays the ID number of the document -->
    <EditText
        android:id="@+id/idContentViewDelete"
        android:hint="@string/id_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ipAddressContentTextDelete"
        android:layout_toEndOf="@+id/tagsTitleViewDelete"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <!-- displays the text: "Tags:" -->
    <TextView
        android:id="@+id/tagsTitleViewDelete"
        android:text="@string/tags_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tagsContentViewDelete"
        android:layout_alignTop="@+id/tagsContentViewDelete"/>

    <!-- displays the tags of the document -->
    <EditText
        android:id="@+id/tagsContentViewDelete"
        android:hint="@string/tags_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:layout_below="@+id/idContentViewDelete"
        android:layout_toEndOf="@+id/tagsTitleViewDelete"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
