<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.carleton.comp4601.a1.SearchActivity"
    tools:showIn="@layout/search_activity">

    <!-- displays the text "IP Address:" -->
    <TextView
        android:id="@+id/ipAddressTitleTextSearch"
        android:text="@string/ip_address_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignTop="@+id/ipAddressContentTextSearch"
        android:layout_alignBottom="@+id/ipAddressContentTextSearch"
        android:layout_alignParentStart="true"/>

    <!-- Allows user to enter their IP Address -->
    <EditText
        android:id="@+id/ipAddressContentTextSearch"
        android:hint="@string/ip_address_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/ipAddressTitleTextSearch"/>

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ipAddressContentTextSearch"
        android:layout_toStartOf="@+id/searchButton"
        android:hint="@string/tags_hint_text"
        />

    <!-- SEARCH Button -->
    <Button
        android:layout_below="@+id/ipAddressContentTextSearch"
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:onClick="search"
        style="?attr/buttonStyle"/>

    <!-- Displays the text: "View Search Results:"-->
    <TextView
        android:id="@+id/documentSearchTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/document_search_title_text"
        android:layout_below="@+id/searchButton"
        android:gravity="center"/>

    <!-- Displays the Document Library -->
    <TextView
        android:id="@+id/documentSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_below="@+id/documentSearchTitleView"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
